more fixing in overflow

--- a/sass/base/_resets.scss
+++ b/sass/base/_resets.scss
@@ -4,7 +4,7 @@
     box-sizing: border-box;
 }
 body , html {
-    // overflow-x:  hidden;
+    overflow-x:  hidden;
     scroll-behavior: smooth;
 }
 
