--- a/sass/components/_input.scss
+++ b/sass/components/_input.scss
@@ -4,9 +4,10 @@ input ,textarea {
     min-width: 70%;
     border: 0px ;
     margin: 10px 0px ;
-    background-color: rgb(141, 141, 141);
+    background-color: rgb(13, 13, 17);
     color: white;
     resize: none;
+    border:1px solid rgba(255, 255,255 ,0.4);
 }
 .contanct_form{
 }
