--- a/sass/components/_saprateors.scss
+++ b/sass/components/_saprateors.scss
@@ -13,7 +13,7 @@
 .section_numberic__lower{
     position:absolute;
     font-size: $md_font_size;
-    right: 0px;
+    right: 20px;
     bottom: 0px;
     color:$primery_red;
     
